[gd_scene load_steps=4 format=3 uid="uid://btjj01uvktlvn"]

[ext_resource type="Script" path="res://scenes/menu/gallery_item.gd" id="1_stf0x"]
[ext_resource type="Theme" uid="uid://o18on08dn11a" path="res://scenes/menu/menu_buttons.tres" id="2_hnmaa"]
[ext_resource type="Texture2D" uid="uid://uq2vxg6rm5jd" path="res://gui/Мелочи/Сохранения/Рамка.png" id="3_03jee"]

[node name="GalleryItem" type="Control" node_paths=PackedStringArray("tip_label", "image_rect", "border", "lock", "new_label")]
custom_minimum_size = Vector2(320, 180)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stf0x")
tip_label = NodePath("MarginContainer/Background/MarginContainer/Lock/MarginContainer/Label")
image_rect = NodePath("MarginContainer/Background/MarginContainer/Image")
border = NodePath("MarginContainer/Background/MarginContainer/Border")
lock = NodePath("MarginContainer/Background/MarginContainer/Lock")
new_label = NodePath("MarginContainer/Background/MarginContainer/Image/MarginContainer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.0646965, 0.0646965, 0.0646965, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Image" type="TextureRect" parent="MarginContainer/Background/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background/MarginContainer/Image"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="RichTextLabel" parent="MarginContainer/Background/MarginContainer/Image/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("2_hnmaa")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
bbcode_enabled = true
text = "[center][color=red]Новое!"
fit_content = true

[node name="Lock" type="ColorRect" parent="MarginContainer/Background/MarginContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Background/MarginContainer/Lock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/Background/MarginContainer/Lock/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_hnmaa")
text = "Закрыто!
Получите концовку #1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="TextureRect" parent="MarginContainer/Background/MarginContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_03jee")
expand_mode = 1

[connection signal="gui_input" from="MarginContainer/Background/MarginContainer/Image" to="." method="_on_image_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/Background/MarginContainer/Image" to="." method="_on_image_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Background/MarginContainer/Image" to="." method="_on_image_mouse_exited"]
